--- a/src/Pipfile
+++ b/src/Pipfile
@@ -11,6 +11,7 @@ djangorestframework = "*"
 pillow = "*"
 pyyaml = "*"
 uritemplate = "*"
+requests-oauthlib = "*"
 
 [requires]
 python_version = "3.8"
